--- a/YD11NL_0913/kezdolap.html
+++ b/YD11NL_0913/kezdolap.html
@@ -42,25 +42,26 @@
             width: 80%;
         }
 
+        table{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
         section, footer {
             color: white;
         }
 
         a:link {
             color: white;
+            font-weight: bold;
         }
 
-        /* visited link */
         a:visited {
             color: lightcyan;
         }
 
-        /* mouse over link */
         a:hover {
             color: lightgray;
         }
-
-        /* selected link */
         a:active {
             color: lightgray;
         }
@@ -80,7 +81,7 @@
             </table>
         </header>
         <section>
-            <p style="margin-top: 20px; margin-bottom: 50px"><b>Üdvözlöm a honlapomon!</b></p>
+            <p style="margin-top: 60px; margin-bottom: 40px"><b>Üdvözlöm a honlapomon!</b></p>
             <p style="margin-bottom: 100px;">Ezt a weblapot az XML kurzuson készítettem el.</p>
 
             <div><b>Forrás:</b></div>
@@ -88,7 +89,7 @@
             <div>Miskolci Egyetem IIT tantárgyi leírások</div>
         </section>
     </div>
-    <footer>Palencsár Enikő YD11NL 2023</footer>
+    <footer>Palencsár Enikő, YD11NL, 2023</footer>
 </body>
 
 </html>
